--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laravel/valet",
+    "name": "larawhale/valet4win",
     "description": "A more enjoyable local development experience for Mac.",
     "keywords": ["laravel", "windows", "zonda"],
     "license": "MIT",
