--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Vitaliy Ryepnoy",
+            "name": "Vitaliy Ryepnoy (vitr)",
             "email": "vitdotonline@gmail.com"
         }
     ],
